# Sora2WatermarkRemove

./: .env  .env.example  .gitignore  Cargo.toml  Readme.md
deploy/: install_ubuntu.sh  uninstall_ubuntu.sh
deploy/nginx/: sora_watermark_remove.conf  sora_watermark_remove_ssl.conf  sora_watermark_remove_ssl_split.conf
deploy/systemd/: sora_watermark_remov.service
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(app)/generate/: page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(auth)/verify/: page.tsx
frontend/src/app/(auth)/verify-email/: page.tsx
frontend/src/components/: logout-button.tsx
frontend/src/components/ui/: button.tsx
frontend/src/lib/: api.ts  auth.ts
migrations/: 2025121901_create_users.sql  2025121902_create_products.sql  2025121903_create_subscriptions.sql  2025121904_create_transactions.sql  2025121905_create_uploads.sql  2025121906_triggers.sql  20251219_01_create_users.sql  20251219_02_create_products.sql  20251219_02_create_uploads.sql  20251219_03_create_subscriptions.sql  20251219_04_create_transactions.sql  20251219_05_create_uploads.sql  20251219_06_triggers.sql  2025122001_add_transactions_parent_contract_id.sql  2025122002_add_subscriptions_buyer_email.sql  2025122003_add_products_lava_offer_id.sql  2025122101_add_email_verification.sql  2025122102_add_free_generation_flag.sql  2025122103_add_user_credits_view.sql
scripts/: seed_dev.sql
src/: billing.rs  db.rs  docs.rs  lib.rs  main.rs  models.rs  queue.rs  s3_utils.rs  ws.rs
src/api/: auth.rs  config.rs  handlers.rs  lava.rs  lava_client.rs  mod.rs  payments.back  payments.rs  products.rs  subscriptions.rs  webhooks.rs  webhooks_lava.rs
tests/: kie_integration.rs  webhooks_integration.rs  webhooks_unit.rs
tests/support/: mod.rs
