[package]
name = "soraWatermarkRemov"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"
sanitize-filename = "0.7.0-beta"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.5"
chrono = "0.4.42"
sqlx = "0.9.0-alpha.1"
uuid = { version = "1.19.0", features = ["v4"] }