[package]
name = "soraWatermarkRemov"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
dotenvy = "0.15"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "migrate"
] }
aws-sdk-s3 = "1"
aws-config = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
jsonwebtoken = "9"
bcrypt = "0.15"
actix-web-lab = "0.20"

hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2"
