[package]
name = "sora_watermark_remov"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix = "0.13"
actix-web-actors = "4"
env_logger = "0.11"
log = "0.4"
actix-multipart = "0.6"
dotenvy = "0.15"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "migrate"
] }
aws-sdk-s3 = "1"
aws-config = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
jsonwebtoken = "9"
bcrypt = "0.15"
actix-web-lab = "0.20"
utoipa = { version = "4", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }

hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1", "tokio1-rustls", "ring", "rustls-native-certs"] }
lapin = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
httpmock = "0.7"
